--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&family=Oxanium:wght@500&display=swap" rel="stylesheet">
-        
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/home.css">
     <title>SHECODES - Homepage</title>
 </head>
@@ -101,9 +102,56 @@
         <div class="map" id="map"></div>
     </section> -->
 
-    <div class="footer-container">
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-top">
+                <div>
+                    <h6 class="footer-title">SITE LINES</h6>
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">About</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Members</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Membership</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Useful</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-    </div>
+            <hr class="footer-divider">
+
+            <div class="footer-bottom">
+                <span class="copyright">SHECODES @SDU. All rights reserved.</span>
+                <ul class="footer-list">
+                    <li class="footer-list-item">
+                        <a href="#" class="footer-list-link">
+                            <i class="ri-telegram-line"></i>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="#" class="footer-list-link">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="#" class="footer-list-link">
+                            <i class="ri-mail-line"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
+
+    <!-- FOOTER ENDS -->
  
     <script src="home.js"></script>
     
