home oage is done

--- a/about.html
+++ b/about.html
@@ -29,9 +29,7 @@ body{
     height: 100vh;
     font-family: var(--regular-text);
     font-size: var(--normal-font-size);
-    background: rgb(0,0,0);
-    background: linear-gradient(159deg, rgba(0,0,0,1) 16%, rgba(83,85,255,1) 71%, rgba(0,255,173,1) 100%);
-    background-attachment:fixed;
+    background: url("https://i.pinimg.com/originals/e5/e0/01/e5e001ecb26b530d51d4fb99bc1ff93b.jpg");
     color: white;
     background-position: center;
     background-size: cover;
@@ -271,6 +269,7 @@ ul{
     margin-top: 10rem;
     padding: 5rem 10%;
     width: 100%;
+    background-color: black;
 }   
 .map-wrapper{
     width: 100%;
@@ -299,7 +298,7 @@ i{
 .footer{
     position: relative;
     padding-block: 3rem;
-    background-color: black;
+    background-color: #25182f;
     color: white;
     font-family: var(--regular-text);
     bottom: 0;
@@ -508,47 +507,4 @@ i{
         opacity: 1;
         transition-delay: calc(.15s * var(--i));
     }
-    .details-section{
-        padding-top: 5rem;
-        padding: 0 10%;
-    }
-    .details-box{
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-    .details-header{
-        width: 60%;
-        font-size: 30px;
-    }
-    .number{
-        font-size: 60px;
-    }
-    .details{
-        font-size: 30px;
-    }
-    .map-wrapper{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        text-align: start;
-        justify-content: start;
-        align-items: start;
-    }
-    .map-section{
-        margin-top: 10rem;
-        padding: 5rem 10%;
-    }
-    .map-header{
-        font-size: 30px;
-    }
-    .map{
-        width: 100%;
-    }
-    .footer-list{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    
 }
