--- a/home.html
+++ b/home.html
@@ -77,7 +77,10 @@
     </main>
 
     <section class="details-section">
-        <span class="details-header">SHECODES at a Glance</span>
+        <span class="details-header">SHECODES</span>
+        <br>
+        <span class="details-header">at a Glance</span>
+
         <div class="numbers-container">
             <span class="details-box">
                 <span class="number">30</span>
@@ -97,10 +100,17 @@
         </div>
     </section>
 
-    <!-- <section class="map-section" id="map-section">
-        <span class="map-header">Our Location</span>
-        <div class="map" id="map"></div>
-    </section> -->
+    <section class="map-section" id="map-section">
+        <div class="map-wrapper">
+            <div class="map-text">
+                <span class="map-header">Our Location</span>
+                <p class="number-description">Kaskelen, Abylaikhan st, 1/1</p>
+            </div>
+
+            
+            <div class="map" id="map"></div>
+        </div>
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -155,7 +165,7 @@
  
     <script src="home.js"></script>
     
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0x17U7Gv78ZdOGEb39Td0REwtYN2CZQQ&callback=initMap" async defer></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0x17U7Gv78ZdOGEb39Td0REwtYN2CZQQ&callback=initMap" async defer></script>
    
 </body>
 </html>
