--- a/membership.html
+++ b/membership.html
@@ -36,7 +36,7 @@
 
     <section class="join-container">
         <div class="hello-text">
-            <h3>Hello friend! <br> Would you like to jois us?</h3>
+            <h1>Hello friend! Want to <span></span></h1>
         </div>
         <div class="steps-container">
             <ul class="steps-list">
@@ -128,7 +128,7 @@
     </footer>
 
     <!-- FOOTER ENDS -->    
-    <script src="membership.js"></script>
+    <script src="membership.js" defer></script>
    
 </body>
 </html>
