--- a/events.html
+++ b/events.html
@@ -29,28 +29,13 @@
             <a href="home.html" style="--i:0;">home</a>
             <a href="events.html" style="--i:1;">events</a>
             <a href="membership.html" style="--i:2;">membership</a>
-            <a href="useful.html" style="--i:3;">useful</a>
-            <a href="contacts.html" style="--i:4;">contacts</a>
+            <a href="contacts.html" style="--i:3;">contacts</a>
         </nav>
     </header>
     <section class="calendar">
         <div class="upcoming-events">
-            <div class="event">
-                <div class="event-date">
-                    <p class="number">30</p>
-                    <p class="month">November</p>
-                </div>
-                <div class="event-img">
-                    <img src="" alt="">
-                </div>
-                <div class="event-description">
-                    <h5>Lorem</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae rerum vero. </p>
-                    <!-- location icon -->
-                    <img src="" alt="" class="icon"> 
-                    <!-- fee icon -->
-                    <img src="" alt="" class="icon">
-                </div>
+            <div class="events-header">
+                <h1>Upcoming events calendar</h1>
             </div>
             <div class="event">
                 <div class="event-date">
@@ -58,26 +43,52 @@
                     <p class="month">November</p>
                 </div>
                 <div class="event-description">
-                    <h5>Lorem</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae rerum vero. </p>
-                    <!-- time icon -->
-                    <img src="" alt="" class="icon"> 
-                    <!-- location icon -->
-                    <img src="" alt="" class="icon">
+                    <h5>Open Days</h5>
+                    <p>Spend 1 day with SHECODES! It's your chance to get familiar with us :3</p>
+                    <div class="small-description">
+                        <!-- location icon -->
+                        <i class="ri-map-pin-line geo-icon" alt="location"></i>
+                        <label for="geo-icon">SDU F205</label>
+                        <!-- fee icon -->
+                        <i class="ri-wallet-2-line fee-icon" alt="fee"></i>
+                        <label for="fee-icon">0</label>
+                    </div>
                 </div>
             </div>
             <div class="event">
                 <div class="event-date">
-                    <p class="number">30</p>
-                    <p class="month">November</p>
+                    <p class="number">01</p>
+                    <p class="month">December</p>
                 </div>
                 <div class="event-description">
-                    <h5>Lorem</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque recusandae rerum vero. </p>
-                    <!-- location icon -->
-                    <img src="" alt="" class="icon"> 
-                    <!-- fee icon -->
-                    <img src="" alt="" class="icon">
+                    <h5>SDU Hackathon: Hack the universe</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam expedita modi corporis quo voluptate esse odit nemo quasi, possimus, reprehenderit sapiente tenetur molestias, dolore nostrum consectetur. Necessitatibus, dolor nobis!</p>
+                    <div class="small-description">
+                        <!-- location icon -->
+                        <i class="ri-map-pin-line geo-icon" alt="location"></i>
+                        <label for="geo-icon">SDU, 3 floor</label>
+                        <!-- fee icon -->
+                        <i class="ri-wallet-2-line fee-icon" alt="fee"></i>
+                        <label for="fee-icon">4k</label>
+                    </div>
+                </div>
+            </div>
+            <div class="event">
+                <div class="event-date">
+                    <p class="number">03</p>
+                    <p class="month">December</p>
+                </div>
+                <div class="event-description">
+                    <h5>KBTU Open 2023 fall with SHECODES</h5>
+                    <p>Wanna join KBTU Open fall 2023, but dont have team? You have a great chance to be in a team with SHECODES! Leave a request ASAP </p>
+                    <div class="small-description">
+                        <!-- location icon -->
+                        <i class="ri-map-pin-line geo-icon" alt="location"></i>
+                        <label for="geo-icon">KBTU building</label>
+                        <!-- fee icon -->
+                        <i class="ri-wallet-2-line fee-icon" alt="fee"></i>
+                        <label for="fee-icon">4k</label>
+                    </div>
                 </div>
             </div>
         </div>
