--- a/home.html
+++ b/home.html
@@ -24,11 +24,10 @@
             <img src="assets/images/img/error.png" alt="" class="close" id="close">
         </label>
         <nav class="navbar" id="navbar">
-            <a href="home.html" style="--i:0;" class="home">home</a>
+            <a href="home.html" style="--i:0;">home</a>
             <a href="events.html" style="--i:1;">events</a>
             <a href="membership.html" style="--i:2;">membership</a>
-            <a href="useful.html" style="--i:3;">useful</a>
-            <a href="contacts.html" style="--i:4;">contacts</a>
+            <a href="contacts.html" style="--i:3;">contacts</a>
         </nav>
     </header>
 
@@ -106,8 +105,6 @@
                 <span class="map-header">Our Location</span>
                 <p class="number-description">Kaskelen, Abylaikhan st, 1/1</p>
             </div>
-
-            
             <div class="map" id="map"></div>
         </div>
     </section>
