--- a/useful.html
+++ b/useful.html
@@ -26,11 +26,12 @@
             <img src="assets/images/img/error.png" alt="" class="close" id="close">
         </label>
         <nav class="navbar" id="navbar">
-            <a href="home.html" style="--i:0;">home</a>
-            <a href="events.html" style="--i:1;">events</a>
-            <a href="membership.html" style="--i:2;">membership</a>
-            <a href="useful.html" style="--i:3;">useful</a>
-            <a href="contacts.html" style="--i:4;">contacts</a>
+            <nav class="navbar" id="navbar">
+                <a href="home.html" style="--i:0;">home</a>
+                <a href="events.html" style="--i:1;">events</a>
+                <a href="membership.html" style="--i:2;">membership</a>
+                <a href="contacts.html" style="--i:3;">contacts</a>
+            </nav>
         </nav>
     </header>
     
