--- a/events.html
+++ b/events.html
@@ -92,6 +92,12 @@
                 </div>
             </div>
         </div>
+    </section>
+    
+    <section class="registration-container">
+        <div class="countdown-header">
+            <h1>Time left till registration</h1>
+        </div>
         <div class="countdown-container" id="countdown-container"></div>
         <button class="more-button"> Register</button>
     </section>
