--- a/contacts.html
+++ b/contacts.html
@@ -61,9 +61,6 @@
                         <li class="footer-list-item">
                             <a href="membership.html" class="footer-list-link">Membership</a>
                         </li>
-                        <li class="footer-list-item">
-                            <a href="useful.html" class="footer-list-link">Useful</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -74,17 +71,17 @@
                 <span class="copyright">SHECODES @SDU. All rights reserved.</span>
                 <ul class="footer-list">
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="telegram-link">
                             <i class="ri-telegram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="instagram-link">
                             <i class="ri-instagram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="email-link">
                             <i class="ri-mail-line"></i>
                         </a>
                     </li>
@@ -97,5 +94,6 @@
     
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="contacts.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
