--- a/events.html
+++ b/events.html
@@ -179,17 +179,17 @@
                 <span class="copyright">SHECODES @SDU. All rights reserved.</span>
                 <ul class="footer-list">
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="telegram-link">
                             <i class="ri-telegram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="instagram-link">
                             <i class="ri-instagram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="email-link">
                             <i class="ri-mail-line"></i>
                         </a>
                     </li>
@@ -201,5 +201,6 @@
 
     <!-- FOOTER ENDS -->
     <script src="events.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
