--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
                 <p class="main-description">
                     place where you can find like-minded, ambitious women community in this huge world of IT, who will help you to learn, grow and develop together. make an attemp to become successfull right now!
                 </p>
-                <button class="more-button">
+                <button class="more-button" id="more-button">
                     see more
                 </button>
             </div>
@@ -122,9 +122,6 @@
                         <li class="footer-list-item">
                             <a href="membership.html" class="footer-list-link">Membership</a>
                         </li>
-                        <li class="footer-list-item">
-                            <a href="useful.html" class="footer-list-link">Useful</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -135,17 +132,17 @@
                 <span class="copyright">SHECODES @SDU. All rights reserved.</span>
                 <ul class="footer-list">
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="telegram-link">
                             <i class="ri-telegram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="instagram-link">
                             <i class="ri-instagram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="email-link">
                             <i class="ri-mail-line"></i>
                         </a>
                     </li>
