--- a/membership.html
+++ b/membership.html
@@ -93,9 +93,6 @@
                         <li class="footer-list-item">
                             <a href="membership.html" class="footer-list-link">Membership</a>
                         </li>
-                        <li class="footer-list-item">
-                            <a href="useful.html" class="footer-list-link">Useful</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -106,17 +103,17 @@
                 <span class="copyright">SHECODES @SDU. All rights reserved.</span>
                 <ul class="footer-list">
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="telegram-link">
                             <i class="ri-telegram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="instagram-link">
                             <i class="ri-instagram-line"></i>
                         </a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="#" class="footer-list-link">
+                        <a href="#" class="footer-list-link" id="email-link">
                             <i class="ri-mail-line"></i>
                         </a>
                     </li>
@@ -128,6 +125,6 @@
 
     <!-- FOOTER ENDS -->    
     <script src="membership.js" defer></script>
-   
+    <script src="home.js"></script>
 </body>
 </html>
