--- a/events.html
+++ b/events.html
@@ -39,10 +39,10 @@
             <p class="main-description">Discover SheCodes! Join 'Open Days'—your gateway to coding excitement. Meet mentors, tackle challenges, and ignite your tech journey. Don't miss out—unleash your potential with us!</p>
         </div>
         <div class="countdown-container" id="countdown-container">
-            <div id="days"></div>
-            <div id="hours"></div>
-            <div id="minutes"></div>
-            <div id="seconds"></div>
+            <div id="days" class="countdown-elements"></div>
+            <div id="hours" class="countdown-elements"></div>
+            <div id="minutes" class="countdown-elements"></div>
+            <div id="seconds" class="countdown-elements"></div>
         </div>
         <button class="register-button" id="register-button"> Register</button>
     </section>
